# sound-bakery

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  todo.md
apps/: CMakeLists.txt
apps/editor/: AppEntry.cpp  CMakeLists.txt  Reflection.cpp  pch.h  stb_image.h
apps/editor/App/: App.cpp  App.h
apps/editor/Managers/: AppManager.cpp  AppManager.h  Manager.h  ProjectManager.cpp  ProjectManager.h
apps/editor/Subsystems/: RendererSubsystem.cpp  RendererSubsystem.h  WidgetSubsystem.cpp  WidgetSubsystem.h
apps/editor/Utils/: MethodDrawer.cpp  MethodDrawer.h  PropertyDrawer.cpp  PropertyDrawer.h
apps/editor/Widgets/: AudioDisplayWidget.cpp  AudioDisplayWidget.h  DetailsWidget.cpp  DetailsWidget.h  FileBrowserWidget.cpp  FileBrowserWidget.h  ImguiExtensions.cpp  PlayControlsWidget.cpp  PlayControlsWidget.h  ProjectExplorerWidget.cpp  ProjectExplorerWidget.h  ProjectNodesWidget.cpp  ProjectNodesWidget.h  RootWidget.cpp  RootWidget.h  SplashWidget.cpp  SplashWidget.h  Widget.cpp  Widget.h
apps/editor/app/: app.cpp
apps/editor/elements/: add_effect_button.cpp  add_effect_button.h
apps/editor/managers/: app_manager.cpp  app_manager.h  project_manager.cpp  project_manager.h
apps/editor/utils/: method_drawer.cpp  method_drawer.h  property_drawer.cpp  property_drawer.h
apps/editor/widgets/: audio_display_widget.cpp  audio_display_widget.h  audio_meter_widget.cpp  audio_meter_widget.h  details_widget.cpp  details_widget.h  file_browser_widget.cpp  file_browser_widget.h  imgui_extensions.cpp  log_widget.h  play_controls_widget.cpp  play_controls_widget.h  profiler_widget.cpp  profiler_widget.h  project_explorer_widget.cpp  project_explorer_widget.h  project_nodes_widget.cpp  project_nodes_widget.h  root_widget.cpp  root_widget.h  splash_widget.cpp  splash_widget.h
apps/game/: CMakeLists.txt
apps/game/app/: app.cpp  app.h
apps/game/widgets/: root_widget.cpp  root_widget.h  soundbank_viewer.cpp  soundbank_viewer.h
cmake/: build_imgui.cmake  build_nfd.cmake  build_sound_bakery.cmake  build_sound_bakery_project.cmake  build_tracy_server.cmake  c++_standards.cmake  c++_warnings.cmake  c_standards.cmake  external_dependencies.cmake  fetch_cpm.cmake  git_utils.cmake  out_of_source_builds.cmake  setup_cpack.cmake  setup_docs.cmake  setup_init.cmake  setup_installation.cmake  setup_main_project.cmake  setup_tests.cmake  utils.cmake
docs/: Design Philosophy.md  Inspiration.md  Roadmap.md
docs/doxygen/: CMakeLists.txt  Doxyfile.in  custom-css.css  header.html
resources/: CMakeLists.txt
src/: CMakeLists.txt
src/gluten/: AppEntry.cpp  CMakeLists.txt  README.md  app_entry.cpp  pch.h
src/gluten/App/: App.cpp  App.h
src/gluten/Managers/: Manager.h
src/gluten/Subsystems/: RendererSubsystem.cpp  Subsystem.h  WidgetSubsystem.h
src/gluten/Widgets/: ImguiExtensions.cpp  RootWidget.cpp  RootWidget.h  Widget.cpp  Widget.h
src/gluten/app/: app.cpp  app.h
src/gluten/elements/: button.cpp  button.h  element.cpp  element.h  image.cpp  image.h  image_button.cpp  image_button.h  menu_bar.cpp  menu_bar.h  slider.cpp  slider.h  text.cpp  text.h  toolbar.cpp  toolbar.h
src/gluten/elements/layouts/: layout.cpp  layout.h
src/gluten/images/: image.cpp  image.h
src/gluten/managers/: manager.cpp
src/gluten/subsystems/: renderer_subsystem.cpp  renderer_subsystem.h  subsystem.h  widget_subsystem.cpp  widget_subsystem.h
src/gluten/theme/: carbon_colors.h  carbon_theme_g100.h  theme.h  walnut_icon.embed  window_images.embed
src/gluten/utils/: imgui_util_functions.cpp  imgui_util_functions.h  imgui_util_structures.h
src/gluten/widgets/: root_widget.cpp  root_widget.h  widget.cpp  widget.h
src/sound_bakery/: CMakeLists.txt  factory.cpp  factory.h  pch.h  sound_bakery.h  sound_bakery_internal.h  sound_bakery_version.h.in  system.cpp  system.h  test.cpp
src/sound_bakery/api/: sound_bakery.cpp
src/sound_bakery/core/: core_fwd.h  core_include.h  memory.cpp  memory.h  property.h
src/sound_bakery/core/database/: database.cpp  database.h  database_object.cpp  database_object.h  database_ptr.cpp  database_ptr.h
src/sound_bakery/core/object/: object.cpp  object.h  object.inl  object_global.h  object_owner.cpp  object_owner.h  object_owner.inl  object_tracker.cpp  object_tracker.h
src/sound_bakery/editor/: editor_defines.h
src/sound_bakery/editor/project/: project.cpp  project.h  project_configuration.cpp  project_configuration.h
src/sound_bakery/effect/: effect.cpp  effect.h
src/sound_bakery/event/: event.cpp  event.h
src/sound_bakery/gameobject/: gameobject.cpp  gameobject.h
src/sound_bakery/maths/: easing.h
src/sound_bakery/node/: node.cpp  node.h
src/sound_bakery/node/bus/: aux_bus.cpp  aux_bus.h  bus.cpp  bus.h
src/sound_bakery/node/container/: blend_container.cpp  blend_container.h  container.cpp  container.h  random_container.cpp  random_container.h  sequence_container.cpp  sequence_container.h  sound_container.cpp  sound_container.h  switch_container.cpp  switch_container.h
src/sound_bakery/parameter/: parameter.cpp  parameter.h
src/sound_bakery/profiling/: voice_tracker.cpp  voice_tracker.h
src/sound_bakery/reflection/: reflection.cpp  reflection.h
src/sound_bakery/serialization/: serializer.cpp  serializer.h
src/sound_bakery/sound/: sound.cpp  sound.h
src/sound_bakery/soundbank/: soundbank.cpp  soundbank.h
src/sound_bakery/util/: api_macros.h  fmod_pointers.h  leak_detector.h  macros.h  sb_pointers.h  singleton.h  type_helper.cpp  type_helper.h
src/sound_bakery/voice/: node_instance.cpp  node_instance.h  node_instance_impl.cpp  voice.cpp  voice.h
src/sound_chef/: .clang-tidy  CMakeLists.txt  sound_chef.c  sound_chef.h  sound_chef_bank.c  sound_chef_bank.h  sound_chef_dsp.c  sound_chef_dsp.h  sound_chef_encoder.c  sound_chef_encoder.h  sound_chef_guide.h  sound_chef_internal.c  sound_chef_internal.h  sound_chef_version.h.in
src/sound_chef/encoders/: sound_chef_encoder_vorbis.c  vorbis_encode_test.c
tests/: CMakeLists.txt  test_sound_bakery.cpp
(+16 files in other folders)
